4 - argocd/kubectl/config/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-ingress
#   annotations:
#     cert-manager.io/cluster-issuer: selfsigned-issuer

    
#     kubernetes.io/tls-acme: "true"

#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#       - argo.brimdataservices.com.br
#       secretName: ingress-argocd-certificate
#   rules:
#     - host: argo.brimdataservices.com.br
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: argocd-server
#                 port:
#                   name: https
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
  - host: argo.brimdataservices.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argo.brimdataservices.com.br
    secretName: argocd-secret # do not change, this is provided by Argo CD
